--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ body {
 
 .result-area > * { margin: 0; }
 
-#tip-amount-result, #total-tip-result {
+#tip-amount-result, #total-result {
 	font-size: 2rem;
 	color: var(--strong-cyan);
 }
@@ -184,7 +184,7 @@ body {
 	grid-column: 1;
 }
 
-.result-area p:nth-child(1) {
+.result-area p:nth-child(2) {
 	grid-row: 2;
 	grid-column: 1;
 }
